--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "app": "^0.1.0",
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
@@ -19,6 +20,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pug": "^2.0.3",
-    "sequelize": "^4.38.0"
+    "sequelize": "^4.38.0",
+    "sequelize-require-models": "^0.1.0"
   }
 }
